--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /data
 /data/raw/.DS_Store
+./LinearRegression/.DS_Store
+./.DS_Store
+./dataframes/.DS_Store
+./data/.DS_Store
+./data/raw/.DS_Store
